# speech-mcp

./: CHANGES.md  Dockerfile.test  MANIFEST.in  README.md  install_local.sh  pyproject.toml
src/speech_mcp/: __init__.py  audio_processor.py  constants.py  server.py
src/speech_mcp/resources/ui/: panel.bundled.html  panel.css  panel.html  panel.js
src/speech_mcp/utils/: logger.py
src/speech_mcp/web/: bundle-html.mjs  package-lock.json  package.json  panel.css  panel.html  panel.ts  tsconfig.json
